- Please report any issue!

-----------------------------------------------------------------------
 VERSION 0.5.x
-----------------------------------------------------------------------

Decorated log: https://github.com/hoffstadt/DearPyGui/releases/tag/v0.5.x

Updates:
- Implot: updated to v0.8

New Commands:
- Plots: Added "add_stair_series" command

-----------------------------------------------------------------------
 VERSION 0.5.66
-----------------------------------------------------------------------

Decorated log: https://github.com/hoffstadt/DearPyGui/releases/tag/v0.5.66

Changes:
- Data Storage: now thread safe
- set_value:    now thread safe
- get_value:    now thread safe

New Commands:
- Tab Button: Added "add_tab_button" command

New Keywords:
- tab: Added "no_reorder" keyword
- tab: Added "leading" keyword
- tab: Added "trailing" keyword
- tab: Added "no_tooltip" keyword

Fixes:
- tab bar: fixed tab bar callback
- drawing: fixed "originy" issue #309
- table: fixed spacing issue #297

-----------------------------------------------------------------------
 VERSION 0.5.62
-----------------------------------------------------------------------

Decorated log: https://github.com/hoffstadt/DearPyGui/releases/tag/v0.5.62

Breaking Changes:
- close_popup: Now requires the name of the popup to be added.

Fixes:
- primary window: Fixed issue in which primary window messed up other window
                  settings and flags

-----------------------------------------------------------------------
 VERSION 0.5.53
-----------------------------------------------------------------------

Decorated log: https://github.com/hoffstadt/DearPyGui/releases/tag/v0.5.53

Updates:
- ImGui:           	Upgraded to v1.79
- ImGuiFileDialog: 	Upgraded to v0.5.1
- Python:           Added python 3.9 support

Fixes:
- start_dearpygui:     	Is now protected from trying to create a new dearpygui instance before closing the last one issue #289