@@ -191,14 +191,18 @@ namespace Marvel {
 
 		enum class mvSeriesType
 		{
-			None = 0, Line, Area, Bar, Error, Heat, Image, Label, Pie, Scatter, Stem, Shade
+			None = 0, Line, Area, Bar, Error, Heat, 
+			Image, Label, Pie, Scatter, Stem, Shade, 
+			Stair, Candle
 		};
 
-		mvSeries(std::string  name, const ImPlotPoint& boundsMin, const ImPlotPoint& boundsMax);
-		mvSeries(std::string  name, const std::vector<mvVec2>& points);
-		mvSeries(std::string  name, const std::vector<mvVec4>& points);
-		mvSeries(std::string  name, const std::vector<float>& points_x, const std::vector<float>& points_y);
-		mvSeries(std::string  name, const std::vector<std::vector<float>>& points);
+		mvSeries(std::string name, const ImPlotPoint& boundsMin, const ImPlotPoint& boundsMax);
+		mvSeries(std::string name, const std::vector<mvVec2>& points);
+		mvSeries(std::string name, const std::vector<mvVec4>& points);
+		mvSeries(std::string name, const std::vector<float>& points_x, const std::vector<float>& points_y);
+		mvSeries(std::string name, const std::vector<std::vector<float>>& points);
+		mvSeries(std::string name, const std::vector<float>& dates, const std::vector<float>& opens,
+			const std::vector<float>& highs, const std::vector<float>& lows, const std::vector<float>& closes);
 
 		virtual ~mvSeries() = default;
 
@@ -214,6 +218,7 @@ namespace Marvel {
 		std::string                     m_name;
 		std::vector<float>              m_xs;
 		std::vector<float>              m_ys;
+		std::vector<float>              m_extra0;
 		std::vector<float>              m_extra1;
 		std::vector<float>              m_extra2;
 		std::vector<std::vector<float>> m_extra3;
