@@ -42,6 +42,7 @@
 #include "Core/PlotAppItems/mvHeatSeries.h"
 #include "Core/PlotAppItems/mvImageSeries.h"
 #include "Core/PlotAppItems/mvStairSeries.h"
+#include "Core/PlotAppItems/mvCandleSeries.h"
 
 //-----------------------------------------------------------------------------
 // Widget Index
